@@ -380,7 +380,7 @@ class DisplayConfig:
 
     def setFileDisplay(self, ls = False, lsl = False, ids = False, 
                        sha1s = False, tags = False, fileDeps = False,
-                       fileVersions = False):
+                       fileVersions = False, fileFlavors = False):
         ls = ls or lsl
         self.ls = ls or lsl
         self.lsl = lsl
@@ -388,6 +388,7 @@ class DisplayConfig:
         self.sha1s = sha1s
         self.tags = tags
         self.fileDeps = fileDeps
+        self.fileFlavors = fileFlavors
         self.fileVersions = fileVersions
 
     def setChildDisplay(self, recurseAll = False, recurseOne = False,
@@ -440,7 +441,7 @@ class DisplayConfig:
         return self.info
 
     def printFiles(self):
-        return self.ls or self.ids or self.sha1s or self.tags or self.fileDeps or self.fileVersions
+        return self.ls or self.ids or self.sha1s or self.tags or self.fileDeps or self.fileVersions or self.fileFlavors
 
     def isVerbose(self):
         return self.lsl
@@ -769,6 +770,7 @@ class TroveFormatter(TroveTupFormatter):
         taglist = ''
         sha1 = ''
         id = ''
+        flavor = ''
 
         dcfg = self.dcfg
         verbose = dcfg.isVerbose()
@@ -777,6 +779,9 @@ class TroveFormatter(TroveTupFormatter):
             name = "%s -> %s" % (path, fileObj.target())
         else:
             name = path
+        if dcfg.fileFlavors:
+            if not fileObj.flavor().isEmpty():
+                flavor = '[%s]' % fileObj.flavor()
 
         if dcfg.tags:
             tags = []
@@ -791,7 +796,7 @@ class TroveFormatter(TroveTupFormatter):
             if fileObj.flags.isTransient():
                 tags.append('transient')
             if tags:
-                taglist = ' [' + ' '.join(tags) + ']' 
+                taglist = ' {' + ' '.join(tags) + '}'
         if dcfg.sha1s:
             if hasattr(fileObj, 'contents') and fileObj.contents:
                 sha1 = sha1ToString(fileObj.contents.sha1()) + ' '
@@ -820,13 +825,14 @@ class TroveFormatter(TroveTupFormatter):
             group = group[1:]
 
         if verbose: 
-            ln = "%s%s%s%s%s    1 %-8s %-8s %s %s %s%s%s" % \
+            ln = "%s%s%s%s%s    1 %-8s %-8s %s %s %s%s%s%s" % \
               (spacer,
                prefix, id, sha1, fileObj.modeString(), owner,
                group, fileObj.sizeString(), 
-               fileObj.timeString(), name, taglist, verStr)
+               fileObj.timeString(), name, flavor, taglist, verStr)
         else:
-            ln = "%s%s%s%s%s%s" % (spacer, id, sha1, path, taglist, verStr)
+            ln = "%s%s%s%s%s%s%s" % (spacer, id, sha1, path, flavor,
+                                     taglist, verStr)
 
         yield ln
 
@@ -1148,7 +1154,7 @@ class JobFormatter(JobTupFormatter):
         if not dcfg.tags or not fileObj.tags:
             taglist = ''
         else:
-            taglist = ' [' + ' '.join(fileObj.tags) + ']' 
+            taglist = ' {' + ' '.join(fileObj.tags) + '}' 
 
         spacer = '  ' * indent
         yield "%s---> %s%s%-10s      %-8s %-8s %8s %11s %s%s" % \
