@@ -43,6 +43,7 @@ def displayTroves(cfg, troveSpecs=[], pathList = [], whatProvidesList=[],
                   # file options
                   ls = False, lsl = False, ids = False, sha1s = False, 
                   tags = False, fileDeps = False, fileVersions = False,
+                  fileFlavors = False,
                   # collection options
                   showTroves = False, recurse = None, showAllTroves = False,
                   weakRefs = False, showTroveFlags = False, 
@@ -140,7 +141,8 @@ def displayTroves(cfg, troveSpecs=[], pathList = [], whatProvidesList=[],
                          baseFlavors = cfg.flavor)
 
     dcfg.setFileDisplay(ls=ls, lsl=lsl, ids=ids, sha1s=sha1s, tags=tags,
-                        fileDeps=fileDeps, fileVersions=fileVersions)
+                        fileDeps=fileDeps, fileVersions=fileVersions,
+                        fileFlavors=fileFlavors)
 
     recurseOne = showTroves or showAllTroves or weakRefs
     if recurse is None and not recurseOne and troveSpecs:
@@ -148,7 +150,7 @@ def displayTroves(cfg, troveSpecs=[], pathList = [], whatProvidesList=[],
         # level explicitly and we specified troves (so everything won't 
         # show up at the top level anyway), guess at whether to recurse
         recurse = True in (ls, lsl, ids, sha1s, tags, showDeps, fileDeps,
-                           fileVersions)
+                           fileVersions, fileFlavors)
     displayHeaders = alwaysDisplayHeaders or showTroveFlags 
 
     dcfg.setChildDisplay(recurseAll = recurse, recurseOne = recurseOne,
