@@ -360,6 +360,9 @@ All file display options imply --recurse.  All extended file display options imp
 .B \-\-file-deps
 Displays the individual provides and requires for each file.  If a file has no dependencies, no information will be displayed.
 .TP
+.B \-\-file-flavors
+Displays the flavor for each file listed.
+.TP
 .B \-\-file-versions
 Displays the version of each file listed.
 .TP
